@@ -19,7 +19,7 @@
  *
  *      I kind of modernized this code a bit. -Dianora
  *
- *   $Id: messages.tab,v 1.7 1999/08/10 23:07:22 lusky Exp $
+ *   $Id: messages.tab,v 1.8 1999/09/09 02:13:40 lusky Exp $
  */
 
 static  char *  replies[] = {
@@ -522,8 +522,7 @@ static  char *  replies[] = {
 /* 478 ERR_BANLISTFULL, */      ":%s 478 %s %s %s :Channel ban list is full",
 /* 479 ERR_BADCHANNAME */
                 ":%s 479 %s %s :Cannot join channel (illegal name)",
-/* 480 ERR_JUPEDCHAN, */
-                ":%s 480 %s %s :Cannot join channel (locally juped)",
+/* 480 */       (char *)NULL,
 /* 481 ERR_NOPRIVILEGES, */
                 ":%s 481 %s :Permission Denied- You're not an IRC operator",
 /* 482 ERR_CHANOPRIVSNEEDED, */ ":%s 482 %s %s :You're not channel operator",
