@@ -16,7 +16,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- * $Id: messages_cust.tab,v 1.6 1999/08/10 23:07:22 lusky Exp $
+ * $Id: messages_cust.tab,v 1.7 1999/09/09 02:13:41 lusky Exp $
  *
  */
 /* 
@@ -523,8 +523,7 @@ static  char *  replies[] = {
 /* 478 ERR_BANLISTFULL, */      ":%s 478 %s %s %s :Channel ban list is full",
 /* 479 ERR_BADCHANNAME */
                 ":%s 479 %s %s :Cannot join channel (illegal name)",
-/* 480 ERR_JUPEDCHAN, */
-                ":%s 480 %s %s :Cannot join channel (locally juped)",
+/* 480 */	(char *)NULL,
 /* 481 ERR_NOPRIVILEGES, */
                 ":%s 481 %s :I don't THINK so, homez... you ain't got what it takes. (IRC operator)",
 /* 482 ERR_CHANOPRIVSNEEDED, */ ":%s 482 %s %s :You can't do that thing, when you don't have that swing (You're not channel operator)",
